# memexpert

./: .dockerignore  .env.example  .envrc  .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  package.json  pnpm-lock.yaml  qdrant.sh  seagen.sh  tailwind.config.cjs
.github/workflows/: build.yml
agent/: .env.example  Dockerfile  README.md  pyproject.toml
agent-client/: README.md  pyproject.toml
agent-client/meme_xpert_agent_client/: __init__.py
agent-client/meme_xpert_agent_client/api/generate/: generate_tags_generate_tags_post.py
agent-client/meme_xpert_agent_client/models/: __init__.py  generate_tags_request.py  generate_tags_response.py
agent/src/agent/: __init__.py  agent.py  config.py  images.py  router.py
assets/: main.css  robots.txt  site.webmanifest
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend-client/: README.md  pyproject.toml
backend-client/meme_xpert_backend_client/: __init__.py
backend-client/meme_xpert_backend_client/api/default/: create_meme_memes_post.py  search_memes_memes_get.py
backend-client/meme_xpert_backend_client/models/: __init__.py  meme.py  meme_create.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: c22fd84d4229_initial_migration.py
backend/src/backend/: __init__.py  config.py  db.py  router.py
backend/src/backend/clients/: __init__.py  agent.py
backend/src/backend/models/: __init__.py  base.py  meme.py  meme_tag_link.py  tag.py
backend/src/backend/repositories/: __init__.py  memes.py  tags.py
backend/src/backend/schemas/: __init__.py  meme.py
backend/src/backend/services/: __init__.py  meme.py
clients/telegram/: .env.example  Dockerfile  README.md  pyproject.toml
clients/telegram/src/telegram_client/: __init__.py  __main__.py  bot.py  config.py
clients/telegram/src/telegram_client/clients/: __init__.py  backend.py
clients/telegram/src/telegram_client/handlers/: __init__.py  create.py  search.py  start.py
entities/src/: files_cache.rs  lib.rs  memes.rs  prelude.rs  sea_orm_active_enums.rs  slug_redirects.rs  tg_uses.rs  translations.rs  web_visits.rs
lib/: pyproject.toml
lib/src/lib/: config.py  fastapi.py
lib/src/lib/observability/: __init__.py  config.py  logfmt.py
migration/: Cargo.toml
migration/src/: lib.rs  m20240408_005449_init.rs  m20240508_214652_create_files_cache.rs  m20250531_150614_add_is_bot_to_web_visits.rs
prompts/: meta.md
prompts/metadata/: description.txt  slug.txt  subtitle.txt  text.txt  title.txt
src/: ai.rs  aibox.rs  bot.rs  control.rs  main.rs  ms_models.rs  openai.rs  storage.rs  web.rs  yandex.rs
templates/: base.html  gallery.html  index.html  main.css  meme.html  search.html  search_bar.html  search_results.html  sitemap.xml  tgbot.html
