[workspace]
resolver = "2"
members = [".", "migration", "entities"]

[package]
name = "memexpert"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }

tokio.workspace = true
sea-orm.workspace = true
entities.path = "entities"
migration.path = "migration"

tracing.workspace = true
tracing-subscriber.workspace = true

sentry = { version = "0.32", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "anyhow",
    "tracing",
    "reqwest",
    "native-tls",
] }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
axum-client-ip = "0.6"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-range = "0.4"

serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "brotli", "native-tls"] }

meilisearch-sdk = "0.26.0"
qdrant-client = "1.9.0"

anyhow = "1.0"
chrono = "0.4"
include_dir = "0.7.3"
itertools = "0.12.1"
mime = "0.3"
mime_guess = "2.0.4"
rand = "0.8"
translit = "0.5"
