[workspace]
resolver = "2"
members = [".", "migration", "entities"]

[package]
name = "memexpert"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros", "throttle", "cache-me"] }

tokio.workspace = true
sea-orm.workspace = true
entities.path = "entities"
migration.path = "migration"

tracing.workspace = true
tracing-subscriber.workspace = true

sentry = { version = "0.34.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "anyhow",
    "tracing",
    "reqwest",
    "native-tls",
] }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

axum = "0.7"
axum-client-ip = "0.6"
axum-extra = { version = "0.9", features = ["cookie"] }
axum-range = "0.4"
minify-html = "0.15.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "brotli", "native-tls"] }
reqwest-middleware = { version = "0.3.2", features = ["json"] }
reqwest-retry = "0.6.1"

qdrant-client = { version = "1.12.1", default-features = false }

anyhow = "1.0"
async-openai = "0.25.0"
base64 = "0.22"
chrono = "0.4"
include_dir = "0.7.3"
itertools = "0.13"
mime = "0.3"
mime_guess = "2.0"
rand = "0.8"
image = "0.25.5"
