[project]
name = "agent"
version = "0.1.0"
description = "MemeXpert Agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.6.0",
    "fastapi[standard]>=0.116.1",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.4",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = ["mypy>=1.17.0", "ruff>=0.12.4"]
local = ["lib"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
extend-select = ["I"]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
