[project]
name = "backend"
version = "0.1.0"
description = "MemeXpert Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = ["mypy>=1.17.0", "ruff>=0.12.4"]
local = ["lib", "meme-xpert-agent-client"]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
lint.extend-select = ["I"]

[tool.uv.sources]
lib = { path = "../lib", editable = true }
meme-xpert-agent-client = { path = "../agent-client", editable = true }
